--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>ALLOSH EMPIRE V76 👑</title>
+    <title>ALLOSH EMPIRE V77 👑</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <style>
@@ -19,7 +19,7 @@
         .header { height: 65px; background: #0a0a0a; border-bottom: 2px solid var(--gold); display: flex; align-items: center; justify-content: space-between; padding: 0 15px; z-index: 1000; position: relative; }
         .h-btn { background: none; border: none; font-size: 28px; color: white; cursor: pointer; }
 
-        /* القوائم الجانبية - تثبيت نهائي */
+        /* القوائم الجانبية */
         .side { position: fixed; top: 0; bottom: 0; width: 285px; background: rgba(10,10,10,0.98); z-index: 9999; backdrop-filter: blur(20px); transition: 0.4s ease; }
         #side-r { right: -290px; border-left: 2px solid var(--gold); }
         #side-l { left: -290px; border-right: 2px solid var(--gold); overflow-y: auto; }
@@ -27,23 +27,21 @@
         #side-r.active { right: 0; } #side-l.active { left: 0; }
         #overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); z-index: 9000; display: none; }
 
-        /* الملف الشخصي الملكي */
-        .prof-top { position: relative; width: 100%; height: 180px; background: #111; }
-        .prof-cov { width: 100%; height: 140px; object-fit: cover; border-bottom: 2px solid var(--gold); cursor: pointer; }
-        .prof-av-wrap { position: absolute; bottom: 0; right: 20px; text-align: center; }
-        .prof-av { width: 85px; height: 85px; border-radius: 50%; border: 3px solid var(--gold); background: #000; cursor: pointer; }
-        .prof-crn { position: absolute; top: -38px; right: 5px; font-size: 45px; filter: drop-shadow(0 0 10px gold); }
-
         /* الشات */
         #chat-flow { position: absolute; top: 65px; bottom: 85px; width: 100%; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 12px; }
         .bubble { background: rgba(255,255,255,0.07); padding: 12px; border-radius: 15px; border: 1px solid #222; max-width: 85%; }
-        .bot-msg { border: 1px solid var(--blue); background: rgba(0,210,255,0.05); color: var(--blue); padding: 10px; border-radius: 10px; text-align: center; font-size: 13px; margin: 5px 0; }
+        
+        /* مربع اليوتيوب الصغير */
+        .yt-frame { width: 100%; max-width: 240px; height: 135px; border-radius: 10px; margin-top: 8px; border: 1px solid #444; display: block; }
 
         .footer { position: fixed; bottom: 0; width: 100%; height: 85px; background: #0a0a0a; border-top: 1px solid #222; display: flex; align-items: center; padding: 0 15px; z-index: 1000; }
         #msg-in { flex: 1; height: 45px; background: #111; border: 1px solid #333; border-radius: 12px; color: #fff; padding: 0 15px; }
-        
-        .on-user { padding: 12px; border-bottom: 1px solid #111; display: flex; align-items: center; justify-content: space-between; }
-        .bot-tag { background: var(--blue); color: #000; padding: 2px 6px; border-radius: 4px; font-size: 10px; font-weight: bold; }
+
+        /* الملف الشخصي */
+        .prof-top { position: relative; width: 100%; height: 180px; background: #111; }
+        .prof-cov { width: 100%; height: 140px; object-fit: cover; border-bottom: 2px solid var(--gold); }
+        .prof-av-wrap { position: absolute; bottom: 0; right: 20px; }
+        .prof-av { width: 85px; height: 85px; border-radius: 50%; border: 3px solid var(--gold); background: #000; }
     </style>
 </head>
 <body>
@@ -66,26 +64,21 @@
         <img class="prof-cov" id="my-cov" src="https://images.unsplash.com/photo-1614850523296-d8c1af93d400" onclick="document.getElementById('pick-cov').click()">
         <input type="file" id="pick-cov" hidden onchange="upImg(this, 'my-cov')">
         <div class="prof-av-wrap">
-            <span class="prof-crn">👑</span>
             <img class="prof-av" id="my-av" src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" onclick="document.getElementById('pick-av').click()">
             <input type="file" id="pick-av" hidden onchange="upImg(this, 'my-av')">
         </div>
     </div>
     <div style="padding:25px; text-align:center; margin-top:15px;">
         <h2 class="king-glow">علوش</h2>
-        <p style="color:var(--gold); font-size:13px;">المالك الرسمي للشات</p>
-        <div style="margin-top:20px; background:rgba(255,255,255,0.05); padding:10px; border-radius:10px; border:1px solid #333;">
-            <small style="color:#888;">الحالة الملكية</small>
-            <p style="color:white; font-size:14px;" id="disp-status">متصل الآن 👑</p>
-        </div>
+        <p style="color:var(--gold);">المالك الرسمي للشات</p>
     </div>
 </div>
 
 <div id="chat-flow"></div>
 
 <div class="footer">
-    <input type="text" id="msg-in" placeholder="تكلم يا إمبراطور..." onkeypress="if(event.key==='Enter') pushMsg()">
-    <button onclick="pushMsg()" style="background:var(--gold); border:none; padding:10px 22px; border-radius:12px; font-weight:900; margin-right:10px;">إرسال</button>
+    <input type="text" id="msg-in" placeholder="أرسل رسالة أو رابط يوتيوب..." onkeypress="if(event.key==='Enter') pushMsg()">
+    <button onclick="pushMsg()" style="background:var(--gold); border:none; padding:10px 22px; border-radius:12px; font-weight:900;">إرسال</button>
 </div>
 
 <script>
@@ -93,31 +86,49 @@
     firebase.initializeApp(config);
     const db = firebase.database();
 
-    let me = { name: "الإمبراطور علوش", img: "https://cdn-icons-png.flaticon.com/512/3135/3135715.png" };
+    let me = { name: "علوش", img: "https://cdn-icons-png.flaticon.com/512/3135/3135715.png" };
 
-    // نظام البوت والاتصال
-    db.ref('online_v76/' + me.name).set(true);
-    db.ref('online_v76/' + me.name).onDisconnect().remove();
+    db.ref('online_v77/' + me.name).set(true);
+    db.ref('online_v77/' + me.name).onDisconnect().remove();
 
-    // رسالة الترحيب من البوت
-    window.onload = () => {
-        let b = document.createElement('div'); b.className = "bot-msg";
-        b.innerHTML = "🛡️ <b>بوت الحماية:</b> أهلاً بك يا إمبراطور علوش. تم تأمين الشات والقوائم بالكامل.";
-        document.getElementById('chat-flow').appendChild(b);
-        setTimeout(() => b.remove(), 7000);
-    };
+    // دالة لاستخراج ID اليوتيوب وتحويله لمشغل صغير
+    function parseYT(text) {
+        const regExp = /^.*(youtu.be\/|v\/|u\/\w\/|embed\/|watch\?v=|\&v=)([^#\&\?]*).*/;
+        const match = text.match(regExp);
+        if (match && match[2].length == 11) {
+            return `<iframe class="yt-frame" src="https://www.youtube.com/embed/${match[2]}" frameborder="0" allowfullscreen></iframe>`;
+        }
+        return '';
+    }
 
-    // تحديث القوائم مع البوت
-    db.ref('online_v76').on('value', s => {
-        let l = document.getElementById('on-list');
-        l.innerHTML = `<div class="on-user"><span>🛡️ بوت الحماية</span><span class="bot-tag">BOT</span></div>`;
-        s.forEach(u => {
-            let isK = u.key.includes("علوش");
-            l.innerHTML += `<div class="on-user"><span>${isK?'👑':'👤'} ${u.key}</span></div>`;
-        });
+    function pushMsg() {
+        let i = document.getElementById('msg-in'); if(!i.value) return;
+        db.ref('chat_v77').push({ u: me.name, t: i.value, a: me.img });
+        i.value = "";
+    }
+
+    db.ref('chat_v77').limitToLast(15).on('child_added', s => {
+        let d = s.val();
+        let ytHtml = parseYT(d.t);
+        let div = document.createElement('div');
+        div.innerHTML = `<div style="display:flex; gap:10px; margin-bottom:12px;">
+            <img src="${d.a}" style="width:38px; height:38px; border-radius:50%; border:1px solid gold;">
+            <div class="bubble">
+                <b style="color:gold; font-size:11px;">${d.u}</b><br>
+                ${d.t}
+                ${ytHtml}
+            </div>
+        </div>`;
+        document.getElementById('chat-flow').appendChild(div);
+        document.getElementById('chat-flow').scrollTop = document.getElementById('chat-flow').scrollHeight;
     });
 
-    // الملف الشخصي (رفع الصور)
+    db.ref('online_v77').on('value', s => {
+        let l = document.getElementById('on-list');
+        l.innerHTML = `<div style="padding:10px; border-bottom:1px solid #111;">🛡️ بوت الحماية</div>`;
+        s.forEach(u => { l.innerHTML += `<div style="padding:10px; border-bottom:1px solid #111;">👤 ${u.key}</div>`; });
+    });
+
     function upImg(input, id) {
         if(input.files && input.files[0]) {
             let r = new FileReader();
@@ -129,35 +140,8 @@
         }
     }
 
-    // الشات
-    function pushMsg() {
-        let i = document.getElementById('msg-in'); if(!i.value) return;
-        db.ref('chat_v76').push({ u: me.name, t: i.value, a: me.img });
-        i.value = "";
-    }
-
-    db.ref('chat_v76').limitToLast(15).on('child_added', s => {
-        let d = s.val();
-        let div = document.createElement('div');
-        div.innerHTML = `<div style="display:flex; gap:10px; margin-bottom:12px;">
-            <img src="${d.a || me.img}" style="width:38px; height:38px; border-radius:50%; border:1px solid var(--gold);">
-            <div class="bubble"><b style="color:var(--gold); font-size:11px;">${d.u}</b><br>${d.t}</div>
-        </div>`;
-        document.getElementById('chat-flow').appendChild(div);
-        document.getElementById('chat-flow').scrollTop = document.getElementById('chat-flow').scrollHeight;
-    });
-
-    // فتح وإغلاق القوائم
-    function openSide(id) { 
-        closeSides(); 
-        document.getElementById(id).classList.add('active'); 
-        document.getElementById('overlay').style.display = 'block'; 
-    }
-    function closeSides() { 
-        document.getElementById('side-l').classList.remove('active');
-        document.getElementById('side-r').classList.remove('active');
-        document.getElementById('overlay').style.display = 'none'; 
-    }
+    function openSide(id) { closeSides(); document.getElementById(id).classList.add('active'); document.getElementById('overlay').style.display = 'block'; }
+    function closeSides() { document.querySelectorAll('.side').forEach(s => s.classList.remove('active')); document.getElementById('overlay').style.display = 'none'; }
 </script>
 </body>
 </html>
