--- a/index.html
+++ b/index.html
@@ -3,26 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>ALLOSH EMPIRE V77 👑</title>
+    <title>ALLOSH RANK SYSTEM V78 👑</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@700;900&display=swap');
         :root { --gold: #ffd700; --bg: #000; --blue: #00d2ff; }
         * { box-sizing: border-box; font-family: 'Cairo', sans-serif; margin: 0; padding: 0; }
-        body { background: var(--bg); color: white; overflow: hidden; height: 100vh; width: 100%; position: fixed; }
+        body { background: var(--bg); color: white; overflow: hidden; height: 100vh; position: fixed; width: 100%; }
 
-        .king-glow { animation: neon 1.5s infinite; font-weight: 900; }
-        @keyframes neon { 0%, 100% {color: #fff; text-shadow: 0 0 10px var(--gold);} 50% {color: var(--gold); text-shadow: 0 0 20px #fff;} }
+        /* ثيم المالك المتحرك - حصري لعلوش */
+        .owner-name {
+            font-size: 20px; /* اسم كبير */
+            font-weight: 900;
+            background: linear-gradient(to right, #ffd700, #fff, #ff4757, #ffd700);
+            background-size: 200% auto;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            animation: shine 2s linear infinite;
+        }
+        @keyframes shine { to { background-position: 200% center; } }
 
-        /* الهيدر */
-        .header { height: 65px; background: #0a0a0a; border-bottom: 2px solid var(--gold); display: flex; align-items: center; justify-content: space-between; padding: 0 15px; z-index: 1000; position: relative; }
-        .h-btn { background: none; border: none; font-size: 28px; color: white; cursor: pointer; }
+        /* رتبة مالك الشات */
+        .owner-badge {
+            background: linear-gradient(45deg, #ffd700, #b8860b);
+            color: #000;
+            font-size: 11px;
+            padding: 2px 8px;
+            border-radius: 5px;
+            font-weight: bold;
+            box-shadow: 0 0 10px rgba(255, 215, 0, 0.5);
+            margin-right: 10px;
+        }
 
-        /* القوائم الجانبية */
+        /* الهيدر والقوائم */
+        .header { height: 65px; background: #0a0a0a; border-bottom: 2px solid var(--gold); display: flex; align-items: center; justify-content: space-between; padding: 0 15px; z-index: 1000; }
         .side { position: fixed; top: 0; bottom: 0; width: 285px; background: rgba(10,10,10,0.98); z-index: 9999; backdrop-filter: blur(20px); transition: 0.4s ease; }
         #side-r { right: -290px; border-left: 2px solid var(--gold); }
-        #side-l { left: -290px; border-right: 2px solid var(--gold); overflow-y: auto; }
+        #side-l { left: -290px; border-right: 2px solid var(--gold); }
         .side.active { transform: translateX(0); }
         #side-r.active { right: 0; } #side-l.active { left: 0; }
         #overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); z-index: 9000; display: none; }
@@ -30,18 +48,14 @@
         /* الشات */
         #chat-flow { position: absolute; top: 65px; bottom: 85px; width: 100%; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 12px; }
         .bubble { background: rgba(255,255,255,0.07); padding: 12px; border-radius: 15px; border: 1px solid #222; max-width: 85%; }
-        
-        /* مربع اليوتيوب الصغير */
-        .yt-frame { width: 100%; max-width: 240px; height: 135px; border-radius: 10px; margin-top: 8px; border: 1px solid #444; display: block; }
 
-        .footer { position: fixed; bottom: 0; width: 100%; height: 85px; background: #0a0a0a; border-top: 1px solid #222; display: flex; align-items: center; padding: 0 15px; z-index: 1000; }
+        /* قائمة المتصلين */
+        .user-row { padding: 15px; border-bottom: 1px solid #111; display: flex; align-items: center; justify-content: space-between; }
+        .user-info { display: flex; align-items: center; gap: 10px; }
+        .user-av { width: 35px; height: 35px; border-radius: 50%; border: 1px solid #333; }
+
+        .footer { position: fixed; bottom: 0; width: 100%; height: 85px; background: #0a0a0a; border-top: 1px solid #222; display: flex; align-items: center; padding: 0 15px; }
         #msg-in { flex: 1; height: 45px; background: #111; border: 1px solid #333; border-radius: 12px; color: #fff; padding: 0 15px; }
-
-        /* الملف الشخصي */
-        .prof-top { position: relative; width: 100%; height: 180px; background: #111; }
-        .prof-cov { width: 100%; height: 140px; object-fit: cover; border-bottom: 2px solid var(--gold); }
-        .prof-av-wrap { position: absolute; bottom: 0; right: 20px; }
-        .prof-av { width: 85px; height: 85px; border-radius: 50%; border: 3px solid var(--gold); background: #000; }
     </style>
 </head>
 <body>
@@ -49,36 +63,29 @@
 <div id="overlay" onclick="closeSides()"></div>
 
 <div class="header">
-    <button class="h-btn" onclick="openSide('side-l')">⚙️</button>
-    <div class="king-glow" style="font-size: 18px;">إمبراطورية علوش</div>
-    <button class="h-btn" onclick="openSide('side-r')">👥</button>
+    <button onclick="openSide('side-l')" style="background:none; border:none; font-size:26px; color:white;">⚙️</button>
+    <div style="font-weight:900; color:gold; font-size:18px;">إمبراطورية علوش</div>
+    <button onclick="openSide('side-r')" style="background:none; border:none; font-size:26px; color:white;">👥</button>
 </div>
 
 <div id="side-r" class="side">
-    <h3 style="padding:20px; text-align:center; color:var(--gold); border-bottom:1px solid #222;">🛡️ المتصلون</h3>
-    <div id="on-list" style="padding:10px;"></div>
+    <h3 style="padding:20px; text-align:center; color:var(--gold); border-bottom:1px solid #222;">🛡️ المتصلون والرتب</h3>
+    <div id="on-list"></div>
 </div>
 
 <div id="side-l" class="side">
-    <div class="prof-top">
-        <img class="prof-cov" id="my-cov" src="https://images.unsplash.com/photo-1614850523296-d8c1af93d400" onclick="document.getElementById('pick-cov').click()">
-        <input type="file" id="pick-cov" hidden onchange="upImg(this, 'my-cov')">
-        <div class="prof-av-wrap">
-            <img class="prof-av" id="my-av" src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" onclick="document.getElementById('pick-av').click()">
-            <input type="file" id="pick-av" hidden onchange="upImg(this, 'my-av')">
-        </div>
-    </div>
-    <div style="padding:25px; text-align:center; margin-top:15px;">
-        <h2 class="king-glow">علوش</h2>
-        <p style="color:var(--gold);">المالك الرسمي للشات</p>
+    <div style="padding:40px; text-align:center;">
+        <div style="font-size:60px;">👑</div>
+        <h2 class="owner-name">علوش</h2>
+        <p style="color:gray; font-size:12px; margin-top:10px;">نظام التحكم الكامل</p>
     </div>
 </div>
 
 <div id="chat-flow"></div>
 
 <div class="footer">
-    <input type="text" id="msg-in" placeholder="أرسل رسالة أو رابط يوتيوب..." onkeypress="if(event.key==='Enter') pushMsg()">
-    <button onclick="pushMsg()" style="background:var(--gold); border:none; padding:10px 22px; border-radius:12px; font-weight:900;">إرسال</button>
+    <input type="text" id="msg-in" placeholder="أمرك مطاع يا إمبراطور..." onkeypress="if(event.key==='Enter') pushMsg()">
+    <button onclick="pushMsg()" style="background:var(--gold); border:none; padding:10px 20px; border-radius:12px; font-weight:900;">إرسال</button>
 </div>
 
 <script>
@@ -86,59 +93,47 @@
     firebase.initializeApp(config);
     const db = firebase.database();
 
-    let me = { name: "علوش", img: "https://cdn-icons-png.flaticon.com/512/3135/3135715.png" };
+    let me = { name: "علوش", role: "owner", img: "https://cdn-icons-png.flaticon.com/512/3135/3135715.png" };
 
-    db.ref('online_v77/' + me.name).set(true);
-    db.ref('online_v77/' + me.name).onDisconnect().remove();
+    db.ref('online_v78/' + me.name).set(me);
+    db.ref('online_v78/' + me.name).onDisconnect().remove();
 
-    // دالة لاستخراج ID اليوتيوب وتحويله لمشغل صغير
-    function parseYT(text) {
-        const regExp = /^.*(youtu.be\/|v\/|u\/\w\/|embed\/|watch\?v=|\&v=)([^#\&\?]*).*/;
-        const match = text.match(regExp);
-        if (match && match[2].length == 11) {
-            return `<iframe class="yt-frame" src="https://www.youtube.com/embed/${match[2]}" frameborder="0" allowfullscreen></iframe>`;
-        }
-        return '';
-    }
+    // تحديث قائمة المتصلين بالرتب
+    db.ref('online_v78').on('value', s => {
+        let l = document.getElementById('on-list'); l.innerHTML = "";
+        s.forEach(u => {
+            let d = u.val();
+            let isOwner = d.name === "علوش";
+            l.innerHTML += `
+                <div class="user-row">
+                    <div class="user-info">
+                        <img src="${d.img}" class="user-av" style="${isOwner?'border-color:gold':''}">
+                        <span class="${isOwner ? 'owner-name' : ''}">${d.name}</span>
+                    </div>
+                    ${isOwner ? '<span class="owner-badge">مالك الشات</span>' : '<span style="color:#666; font-size:10px;">عضو VIP</span>'}
+                </div>`;
+        });
+    });
 
     function pushMsg() {
         let i = document.getElementById('msg-in'); if(!i.value) return;
-        db.ref('chat_v77').push({ u: me.name, t: i.value, a: me.img });
+        db.ref('chat_v78').push({ u: me.name, t: i.value, a: me.img, r: me.role });
         i.value = "";
     }
 
-    db.ref('chat_v77').limitToLast(15).on('child_added', s => {
+    db.ref('chat_v78').limitToLast(15).on('child_added', s => {
         let d = s.val();
-        let ytHtml = parseYT(d.t);
+        let isOwner = d.u === "علوش";
         let div = document.createElement('div');
         div.innerHTML = `<div style="display:flex; gap:10px; margin-bottom:12px;">
-            <img src="${d.a}" style="width:38px; height:38px; border-radius:50%; border:1px solid gold;">
+            <img src="${d.a}" style="width:38px; height:38px; border-radius:50%; border:1px solid ${isOwner?'gold':'#333'};">
             <div class="bubble">
-                <b style="color:gold; font-size:11px;">${d.u}</b><br>
-                ${d.t}
-                ${ytHtml}
+                <b class="${isOwner?'owner-name':''}" style="font-size:12px;">${d.u}</b><br>${d.t}
             </div>
         </div>`;
         document.getElementById('chat-flow').appendChild(div);
         document.getElementById('chat-flow').scrollTop = document.getElementById('chat-flow').scrollHeight;
     });
-
-    db.ref('online_v77').on('value', s => {
-        let l = document.getElementById('on-list');
-        l.innerHTML = `<div style="padding:10px; border-bottom:1px solid #111;">🛡️ بوت الحماية</div>`;
-        s.forEach(u => { l.innerHTML += `<div style="padding:10px; border-bottom:1px solid #111;">👤 ${u.key}</div>`; });
-    });
-
-    function upImg(input, id) {
-        if(input.files && input.files[0]) {
-            let r = new FileReader();
-            r.onload = (e) => { 
-                document.getElementById(id).src = e.target.result;
-                if(id === 'my-av') me.img = e.target.result;
-            };
-            r.readAsDataURL(input.files[0]);
-        }
-    }
 
     function openSide(id) { closeSides(); document.getElementById(id).classList.add('active'); document.getElementById('overlay').style.display = 'block'; }
     function closeSides() { document.querySelectorAll('.side').forEach(s => s.classList.remove('active')); document.getElementById('overlay').style.display = 'none'; }
